--- a/content/EOEC.html
+++ b/content/EOEC.html
@@ -50,21 +50,16 @@
   </script>
 </head>
 
-<body>
-  <header id="top">
-    <div class="con_header-bg">
-      <a href="#top">
-        <h2 class="big-header">SUZUKI AOI</h2>
-      </a>
-      <div class="small-header">
-        <div class="p-position">
+<body class="move ttb">
+  <div class="animation-bg5"></div>
+  <div id="container">
+    <header id="top">
+      <div class="con_header-bg">
+        <div class="small-header">
           <button id="topbtn">
             <h3 class="small-name none">Enoshima Ocean Education Center
             </h3>
           </button>
-          <div class="p-top menu-trigger" id="menu07">
-            <img src="../image/portfolio_png.png" alt="">
-          </div>
           <a href="../content/profile.html">
             <h3 class="text-repeat">
               <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
@@ -72,125 +67,130 @@
           </a>
         </div>
       </div>
-    </div>
-    <nav>
-      <div id="g-nav">
-        <div class="g-nav-box">
-          <div class="p-top">
-            <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+      <div class="p-top menu-trigger" id="menu07">
+        <img src="../image/portfolio_png.png" alt="">
+      </div>
+      <nav>
+        <div id="g-nav">
+          <div class="g-nav-box">
+            <div class="p-top">
+              <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+            </div>
+            <ul class="g-nav-main">
+              <li>
+                <a href="../index_2.html">
+                  <h1>Top</h1>
+                </a>
+              </li>
+              <li>
+                <h1>Profile</h1>
+              </li>
+              <li class="contents-click">
+                <h1>Contents</h1>
+                <div class="g-nav-contents-box none">
+                  <ul class="g-nav-contents">
+                    <li>
+                      <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="JOYL.html">JOYL</a></h2>
+                    </li>
+                  </ul>
+                </div>
+
+              </li>
+            </ul>
           </div>
-          <ul class="g-nav-main">
-            <li>
-              <a href="../index.html">
-                <h1>Top</h1>
-              </a>
-            </li>
-            <li>
-              <h1>Profile</h1>
-            </li>
-            <li class="contents-click">
-              <h1>Contents</h1>
-              <div class="g-nav-contents-box none">
-                <ul class="g-nav-contents">
-                  <li>
-                    <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="JOYL.html">JOYL</a></h2>
-                  </li>
-                </ul>
-              </div>
+        </div>
+      </nav>
+    </header>
 
+    <div class="content-width">
+      <div class="ct-title">
+        <h1 class="eoec">Enoshima Ocean Education Center</h1>
+      </div>
+      <div class="sec-top">
+        <div class="top-img left-width">
+          <img src="../image/EOEC/EOEC_logo1.jpg" alt="">
+        </div>
+        <div class="top-exp right-width">
+          <div class="exp-box">
+            <h3>Project</h3>
+            <h6>
+              子どもたちへ海の教育活動を行う「江の島海洋教育センターのロゴ作成。<br>江ノ島を拠点に、海を中心とした自然の中で思い切り遊び、身体を動かすことを教えている団体。<br>メインの活動場所である海や太陽をイメージし、紙媒体への使用のほかに、Tシャツやキャップに印刷することを踏まえて3パターンのロゴを展開。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Item / Time required</h3>
+            <ul class="item-list">
+              <li>
+                <h6><a href="#area-1">Logo</a> / 6h</h6>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="sec-1 top-mg" id="area-1">
+        <div class="left-width">
+          <h1>Logo</h1>
+          <ul class="p-goto-nav__lists">
+            <li class="p-goto-nav__list js-navList">
+              <p>1*1 Symbol mark</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Symbol + Logotype -A</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Symbol + Logotype -B</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>T-shirts -MockUp</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Card -MockUp</p>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
-  </header>
-
-  <div class="content-width">
-    <div class="ct-title">
-      <h1>Enoshima Ocean Education Center</h1>
-    </div>
-    <div class="sec-top">
-      <div class="top-img left-width">
-        <img src="../image/EOEC/EOEC_logo1.jpg" alt="">
-      </div>
-      <div class="top-exp right-width">
-        <div class="exp-box">
-          <h3>Project</h3>
-          <h6>
-            子どもたちへ海の教育活動を行う「江の島海洋教育センターのロゴ作成。<br>江ノ島を拠点に、海を中心とした自然の中で思い切り遊び、身体を動かすことを教えている団体。<br>メインの活動場所である海や太陽をイメージし、紙媒体への使用のほかに、Tシャツやキャップに印刷することを踏まえて3パターンのロゴを展開。
-          </h6>
-        </div>
-        <div class="exp-box">
-          <h3>Item / Time required</h3>
-          <ul class="item-list">
-            <li>
-              <h6><a href="#area-1">Logo</a> / 6h</h6>
-            </li>
-          </ul>
+        <div class="right-width">
+          <div class="slider">
+            <ul class="slider js-slickGoTo">
+              <li class="slider-item slider-item71">
+              </li>
+              <li class="slider-item slider-item72">
+              </li>
+              <li class="slider-item slider-item73">
+              </li>
+              <li class="slider-item slider-item74">
+              </li>
+              <li class="slider-item slider-item75">
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="sec-1 top-mg" id="area-1">
-      <div class="left-width">
-        <h1>Logo</h1>
-        <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList">
-            <p>1*1 Symbol mark</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Symbol + Logotype -A</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Symbol + Logotype -B</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>T-shirts -MockUp</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Card -MockUp</p>
-          </li>
-        </ul>
-      </div>
-      <div class="right-width">
-        <div class="slider">
-          <ul class="slider js-slickGoTo">
-            <li class="slider-item slider-item71">
-            </li>
-            <li class="slider-item slider-item72">
-            </li>
-            <li class="slider-item slider-item73">
-            </li>
-            <li class="slider-item slider-item74">
-            </li>
-            <li class="slider-item slider-item75">
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
- 
 
 
-    <footer id="footer">
-      <p id="page-top"><a href="#">
-          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-        </a></p>
-    </footer>
+
+      <footer id="footer">
+        <p id="page-top"><a href="#">
+            <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png"
+              alt="collapse-arrow" />
+          </a></p>
+      </footer>
+
+    </div>
 
 
   </div>
