--- a/content/JOYL.html
+++ b/content/JOYL.html
@@ -50,21 +50,15 @@
   </script>
 </head>
 
-<body>
-  <header id="top">
-    <div class="con_header-bg">
-      <a href="#top">
-        <h2 class="big-header">SUZUKI AOI</h2>
-      </a>
-      <div class="small-header">
-        <div class="p-position">
+<body class="move ttb">
+  <div class="animation-bg6"></div>
+  <div id="container">
+    <header id="top">
+      <div class="con_header-bg">
+        <div class="small-header">
           <button id="topbtn">
-            <h3 class="small-name none">JOYL
-            </h3>
+            <h3 class="small-name none">JOYL ひとさじの旬</h3>
           </button>
-          <div class="p-top menu-trigger" id="menu07">
-            <img src="../image/portfolio_png.png" alt="">
-          </div>
           <a href="../content/profile.html">
             <h3 class="text-repeat">
               <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
@@ -72,73 +66,76 @@
           </a>
         </div>
       </div>
-    </div>
-    <nav>
-      <div id="g-nav">
-        <div class="g-nav-box">
-          <div class="p-top">
-            <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
-          </div>
-          <ul class="g-nav-main">
-            <li>
-              <a href="../index.html">
-                <h1>Top</h1>
-              </a>
-            </li>
-            <li>
-              <h1>Profile</h1>
-            </li>
-            <li class="contents-click">
-              <h1>Contents</h1>
-              <div class="g-nav-contents-box none">
-                <ul class="g-nav-contents">
-                  <li>
-                    <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="JOYL.html">JOYL</a></h2>
-                  </li>
-                </ul>
-              </div>
-
-            </li>
-          </ul>
-        </div>
+      <div class="p-top menu-trigger" id="menu07">
+        <img src="../image/portfolio_png.png" alt="">
       </div>
-    </nav>
-  </header>
+      <nav>
+        <div id="g-nav">
+          <div class="g-nav-box">
+            <div class="p-top">
+              <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+            </div>
+            <ul class="g-nav-main">
+              <li>
+                <a href="../index_2.html">
+                  <h1>Top</h1>
+                </a>
+              </li>
+              <li>
+                <h1>Profile</h1>
+              </li>
+              <li class="contents-click">
+                <h1>Contents</h1>
+                <div class="g-nav-contents-box none">
+                  <ul class="g-nav-contents">
+                    <li>
+                      <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="JOYL.html">JOYL</a></h2>
+                    </li>
+                  </ul>
+                </div>
 
-  <div class="content-width">
-    <div class="ct-title">
-      <h1>JOYL</h1>
-      <h2>ひとさじの旬</h2>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="content-width">
+      <div class="ct-title">
+        <h1>JOYL ひとさじの旬</h1>
+      </div>
+      <div class="joyl-top">
+        <h1>Newspaper<br>Ads</h1>
+        <h3>B1 W728*H1030</h3>
+      </div>
+      <div class="joyl-img">
+        <img src="../image/JOYL/Joyl_3.jpg" alt="">
+      </div>
     </div>
-    <div class="joyl-top">
-      <h1>Newspaper Ads</h1>
-      <h3>B1 W728*H1030</h3>
-    </div>
-    <div class="joyl-img">
-      <img src="../image/JOYL/Joyl_3.jpg" alt="">
-    </div>
+
+    <footer id="footer">
+      <p id="page-top"><a href="#">
+          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
+        </a></p>
+    </footer>
+
   </div>
-
-  <footer id="footer">
-    <p id="page-top"><a href="#">
-        <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-      </a></p>
-  </footer>
 
 
   </div>
