--- a/content/tennnoharuka.html
+++ b/content/tennnoharuka.html
@@ -50,21 +50,16 @@
   </script>
 </head>
 
-<body>
-  <header id="top">
-    <div class="con_header-bg">
-      <a href="#top">
-        <h2 class="big-header">SUZUKI AOI</h2>
-      </a>
-      <div class="small-header">
-        <div class="p-position">
+<body class="move ttb">
+  <div class="animation-bg4"></div>
+  <div id="container">
+    <header id="top">
+      <div class="con_header-bg">
+        <div class="small-header">
           <button id="topbtn">
             <h3 class="small-name none">天ノはるか
             </h3>
           </button>
-          <div class="p-top menu-trigger" id="menu07">
-            <img src="../image/portfolio_png.png" alt="">
-          </div>
           <a href="../content/profile.html">
             <h3 class="text-repeat">
               <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
@@ -72,88 +67,91 @@
           </a>
         </div>
       </div>
-    </div>
-    <nav>
-      <div id="g-nav">
-        <div class="g-nav-box">
-          <div class="p-top">
-            <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+      <div class="p-top menu-trigger" id="menu07">
+        <img src="../image/portfolio_png.png" alt="">
+      </div>
+      <nav>
+        <div id="g-nav">
+          <div class="g-nav-box">
+            <div class="p-top">
+              <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+            </div>
+            <ul class="g-nav-main">
+              <li>
+                <a href="../index_2.html">
+                  <h1>Top</h1>
+                </a>
+              </li>
+              <li>
+                <h1>Profile</h1>
+              </li>
+              <li class="contents-click">
+                <h1>Contents</h1>
+                <div class="g-nav-contents-box none">
+                  <ul class="g-nav-contents">
+                    <li>
+                      <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="JOYL.html">JOYL</a></h2>
+                    </li>
+                  </ul>
+                </div>
+
+              </li>
+            </ul>
           </div>
-          <ul class="g-nav-main">
-            <li>
-              <a href="../index.html">
-                <h1>Top</h1>
-              </a>
-            </li>
-            <li>
-              <h1>Profile</h1>
-            </li>
-            <li class="contents-click">
-              <h1>Contents</h1>
-              <div class="g-nav-contents-box none">
-                <ul class="g-nav-contents">
-                  <li>
-                    <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="JOYL.html">JOYL</a></h2>
-                  </li>
-                </ul>
-              </div>
+        </div>
+      </nav>
+    </header>
 
-            </li>
-          </ul>
+    <div class="content-width">
+      <div class="ct-title">
+        <h1 class="fukushima">天ノはるか</h1>
+      </div>
+      <div class="sec-top">
+        <div class="top-img left-width">
+          <div class="ten-position">
+            <img src="../image/tennno-haruka/天ノはるか.png" alt="" class="ten-logo">
+          </div>
+        </div>
+        <div class="top-exp right-width">
+          <div class="exp-box">
+            <h3>Project</h3>
+            <h6>
+              甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。<br><br>Size
+              (W60*H130)
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Item / Time required</h3>
+            <ul class="item-list">
+              <li>
+                <h6><a href="#area-1">Typography</a> / 3h</h6>
+              </li>
+              <li>
+                <h6><a href="#area-2">Package</a> / 4h</h6>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <div class="content-width">
-    <div class="ct-title">
-      <h1 class="fukushima">天ノはるか</h1>
-    </div>
-    <div class="sec-top">
-      <div class="top-img left-width">
-        <div class="ten-position">
-          <img src="../image/tennno-haruka/天ノはるか.png" alt="" class="ten-logo">
-        </div>
-      </div>
-      <div class="top-exp right-width">
-        <div class="exp-box">
-          <h3>Project</h3>
-          <h6>
-            甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。<br><br>Size (W60*H130)
-          </h6>
-        </div>
-        <div class="exp-box">
-          <h3>Item / Time required</h3>
-          <ul class="item-list">
-            <li>
-              <h6><a href="#area-1">Typography</a> / 3h</h6>
-            </li>
-            <li>
-              <h6><a href="#area-2">Package</a> / 4h</h6>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="sec-1 top-mg" id="area-1">
-      <div class="left-width">
-        <h1>Typography</h1>
-        <!-- <ul class="p-goto-nav__lists">
+      <div class="sec-1 top-mg" id="area-1">
+        <div class="left-width">
+          <h1>Typography</h1>
+          <!-- <ul class="p-goto-nav__lists">
           <div class="copy-box">
             <h3>Lead copy</h3>
             <h3 class="lead-copy">ふくのしま。福島。
@@ -166,52 +164,55 @@
             </h6>
           </div>
         </ul> -->
-      </div>
-      <div class="right-width">
-        <ul class="ten-typo">
-          <img src="../image/tennno-haruka/typo_1.jpg" alt="">
-        </ul>
-      </div>
-    </div>
- 
-
-    <div class="sec-2 top-mg fk-copy" id="area-2">
-      <div class="left-width">
-        <h1>Package</h1>
-        <h3>W60*H130</h3>
-        <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan A</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan A -MockUp</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan B</p>
-          </li>
-        </ul>
-      </div>
-      <div class="right-width">
-        <div class="slider">
-          <ul class="slider js-slickGoTo">
-            <li class="slider-item slider-item61">
-            </li>
-            <li class="slider-item slider-item62">
-            </li>
-            <li class="slider-item slider-item63">
-            </li>
+        </div>
+        <div class="right-width">
+          <ul class="ten-typo">
+            <img src="../image/tennno-haruka/typo_1.jpg" alt="">
           </ul>
         </div>
       </div>
-        
+
+
+      <div class="sec-2 top-mg fk-copy" id="area-2">
+        <div class="left-width">
+          <h1>Package</h1>
+          <h3>W60*H130</h3>
+          <ul class="p-goto-nav__lists">
+            <li class="p-goto-nav__list js-navList">
+              <p>Plan A</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Plan A -MockUp</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Plan B</p>
+            </li>
+          </ul>
+        </div>
+        <div class="right-width">
+          <div class="slider">
+            <ul class="slider js-slickGoTo">
+              <li class="slider-item slider-item61">
+              </li>
+              <li class="slider-item slider-item62">
+              </li>
+              <li class="slider-item slider-item63">
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+
+
+      <footer id="footer">
+        <p id="page-top"><a href="#">
+            <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png"
+              alt="collapse-arrow" />
+          </a></p>
+      </footer>
+
     </div>
-
-
-    <footer id="footer">
-      <p id="page-top"><a href="#">
-          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-        </a></p>
-    </footer>
 
 
   </div>
