--- a/index_2.html
+++ b/index_2.html
@@ -16,7 +16,8 @@
   <!-- <link rel="stylesheet" href="css/load.scss"> -->
 </head>
 
-<body>
+<body class="move ttb">
+  <div class="animation-bg"></div>
   <header>
     <div class="header-bg">
       <div class="p-position">
@@ -41,12 +42,14 @@
         <div class="g-nav-box">
           <ul class="g-nav-main">
             <li>
-              <a href="../index.html">
+              <a href="index_2.html">
                 <h1>Top</h1>
               </a>
             </li>
             <li>
-              <h1>Profile</h1>
+              <a href="content/profile.html">
+                <h1>Profile</h1>
+              </a>
             </li>
             <li class="contents-click">
               <h1>Contents</h1>
@@ -79,27 +82,27 @@
     </nav>
   </header>
 
-  <div class="splashbg1"></div>
+
 
   <div class="content-box">
     <div class="container">
-      <div class="top-item fadeUp delay-time1 bgUD">
-        <a href="content/birdcoffee.html">
+      <div class="top-item fadeUp bgUD">
+        <a href="content/birdcoffee.html" class="btn01">
           <span class="mask-bc">
             <img src="image/bird_coffee/logo_01.png" alt="">
             <span class="cap">
-              <h3>bird coffee -Logo</h3>
+              <h3>1.bird coffee -Logo</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
         </a>
       </div>
       <div class="top-item fadeUp delay-time1 bgUD">
-        <a href="content/EOEC.html">
+        <a href="content/EOEC.html" class="btn05">
           <span class="mask-eo">
-            <img src="image/EOEC/EOEC_logo1.jpg" alt="">
+            <img src="image/EOEC/EOEC_logo1.png" alt="">
             <span class="cap">
-              <h3>Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -110,18 +113,18 @@
           <span class="mask-fu">
             <img src="image/Fukushima/Free-Three-Subway-Station-Poster-Mockup_top.jpg" alt="">
             <span class="cap">
-              <h3>どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？ -Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
         </a>
       </div>
-      <div class="top-item box-2 fadeUp delay-time4 bgUD">
+      <div class="top-item box-2 fadeUp delay-tim2 bgUD">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_red1.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -132,7 +135,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/tennnoharuka_package_top.jpg" alt="">
             <span class="cap">
-              <h3>天ノはるか -Package</h3>
+              <h3>4.天ノはるか -Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -143,7 +146,7 @@
           <span class="mask-jo">
             <img src="image/JOYL/Joyl_shizuku.jpg" alt="">
             <span class="cap">
-              <h3>JOYL ひとさじの旬</h3>
+              <h3>6.JOYL ひとさじの旬</h3>
               <h6>Newspaper Ads</h6>
             </span>
           </span>
@@ -159,7 +162,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/bc_poster_yoko3.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Poster</h3>
+              <h3>1.bird coffee -Poster</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -174,7 +177,7 @@
           <span class="mask-kp">
             <img src="image/konpake/02 Free Minimal Macbook Pro Mockup_4.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Website</h3>
+              <h3>2.こんなにかわいいパッケージ -Website</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -185,7 +188,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_A3wide.jpg" alt="">
             <span class="cap">
-              <h3>どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？ -Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -196,7 +199,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/天ノはるか.png" alt="">
             <span class="cap">
-              <h3>天ノはるか -Typography</h3>
+              <h3>4.天ノはるか -Typography</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -207,7 +210,7 @@
           <span class="mask-eo">
             <img src="image/EOEC/Standard Business Card Mockup.jpg" alt="">
             <span class="cap">
-              <h3>Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -223,7 +226,7 @@
           <span class="mask-jo">
             <img src="image/JOYL/Joyl_top_1.jpg" alt="">
             <span class="cap">
-              <h3>JOYL ひとさじの旬</h3>
+              <h3>6.JOYL ひとさじの旬</h3>
               <h6>Newspaper Ads</h6>
             </span>
           </span>
@@ -234,7 +237,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_1.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Package</h3>
+              <h3>1.bird coffee -Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -245,7 +248,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Package</h3>
+              <h3>1.bird coffee -Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -256,7 +259,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_3.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Package</h3>
+              <h3>1.bird coffee -Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -267,7 +270,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_4.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Package</h3>
+              <h3>1.bird coffee -Package</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -276,9 +279,9 @@
       <div class="top-item box-11 fadeUpTrigger delay-time3 bgUD">
         <a href="content/konpake.html">
           <span class="mask-kp">
-            <img src="image/konpake/Outdoor_Poster_Mockup_1.jpg" alt="">
+            <img src="image/konpake/Outdoor_Poster_Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -289,7 +292,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_icon.jpg" alt="">
             <span class="cap">
-              <h3>どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？ -Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -300,7 +303,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/tennnoharuka_package_1.jpg" alt="">
             <span class="cap">
-              <h3>天ノはるか -Package</h3>
+              <h3>4.天ノはるか -Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -309,9 +312,9 @@
       <div class="top-item box-13 fadeUpTrigger bgUD">
         <a href="content/EOEC.html">
           <span class="mask-eo">
-            <img src="image/EOEC/EOEC_logo2.jpg" alt="">
+            <img src="image/EOEC/EOEC_logo2.png" alt="">
             <span class="cap">
-              <h3>Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -323,14 +326,14 @@
         </button>
       </div>
       <div class="top-item box-22 fadeUpTrigger">
-        <h4>1.bird coffee  2.こんなにかわいいパッケージ  3.どのしまにする？  4.天のはるか  5.Enoshima Ocean Education Center  6.JOYL ひとさじの旬</h4>
+        <h2>1.bird coffee  2.こんなにかわいいパッケージ  3.どのしまにする？  4.天のはるか  5.Enoshima Ocean Education Center  6.JOYL ひとさじの旬</h2>
       </div>
       <div class="top-item box-14 fadeUpTrigger bgUD">
         <a href="content/JOYL.html">
           <span class="mask-jo">
             <img src="image/JOYL/Joyl_top_2.jpg" alt="">
             <span class="cap">
-              <h3>JOYL ひとさじの旬</h3>
+              <h3>6.JOYL ひとさじの旬</h3>
               <h6>Newspaper Ads</h6>
             </span>
           </span>
@@ -341,7 +344,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/iphone-15-pro-on-white-background-v6-front-view_2.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Website</h3>
+              <h3>1.bird coffee -Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -352,7 +355,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_logo.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Logo</h3>
+              <h3>2.こんなにかわいいパッケージ -Logo</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -363,7 +366,7 @@
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_A1.jpg" alt="">
             <span class="cap">
-              <h3>どのしまにする？ -Poster</h3>
+              <h3>3.どのしまにする？ -Poster</h3>
               <h6>Poster B1・B3wide</h6>
             </span>
           </span>
@@ -374,7 +377,7 @@
           <span class="mask-te">
             <img src="image/tennno-haruka/top_logo_planB.jpg" alt="">
             <span class="cap">
-              <h3>天ノはるか -Package</h3>
+              <h3>4.天ノはるか -Package</h3>
               <h6>Typography/Package</h6>
             </span>
           </span>
@@ -390,7 +393,7 @@
           <span class="mask-jo">
             <img src="image/JOYL/Joyl_top_3.jpg" alt="">
             <span class="cap">
-              <h3>JOYL ひとさじの旬</h3>
+              <h3>6.JOYL ひとさじの旬</h3>
               <h6>Newspaper Ads</h6>
             </span>
           </span>
@@ -401,7 +404,7 @@
           <span class="mask-eo">
             <img src="image/EOEC/Tshirt.jpg" alt="">
             <span class="cap">
-              <h3>Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -412,7 +415,7 @@
           <span class="mask-bc">
             <img src="image/bird_coffee/02 Free Minimal Macbook Pro Mockup_2.jpg" alt="">
             <span class="cap">
-              <h3>bird coffee -Website</h3>
+              <h3>1.bird coffee -Website</h3>
               <h6>Logo/Poster/Copy/Package/Website</h6>
             </span>
           </span>
@@ -423,7 +426,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_yel1.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -434,7 +437,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_yel2.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -445,7 +448,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_blu1.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -456,7 +459,7 @@
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_blu2.jpg" alt="">
             <span class="cap">
-              <h3>こんなにかわいいパッケージ -Flyer</h3>
+              <h3>2.こんなにかわいいパッケージ -Flyer</h3>
               <h6>Logo/Flyer/Copy/Website</h6>
             </span>
           </span>
@@ -465,9 +468,9 @@
       <div class="top-item box-21 fadeUpTrigger delay-time3 bgUD">
         <a href="content/EOEC.html">
           <span class="mask-eo">
-            <img src="image/EOEC/EOEC_logo3.jpg" alt="">
+            <img src="image/EOEC/EOEC_logo_p3.png" alt="">
             <span class="cap">
-              <h3>Enoshima Ocean Education Center -Logo</h3>
+              <h3>5.Enoshima Ocean Education Center -Logo</h3>
               <h6>Logo</h6>
             </span>
           </span>
@@ -487,6 +490,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/load.js"></script>
+  <script src="js/splash.js"></script>
 
 
 </body>
