--- a/content/fukushima.html
+++ b/content/fukushima.html
@@ -50,20 +50,15 @@
   </script>
 </head>
 
-<body>
-  <header id="top">
-    <div class="con_header-bg">
-      <a href="#top">
-        <h2 class="big-header">SUZUKI AOI</h2>
-      </a>
-      <div class="small-header">
-        <div class="p-position">
+<body class="move ttb">
+  <div class="animation-bg3"></div>
+  <div id="container">
+    <header id="top">
+      <div class="con_header-bg">
+        <div class="small-header">
           <button id="topbtn">
             <h3 class="small-name none">どのしまにする？</h3>
           </button>
-          <div class="p-top menu-trigger" id="menu07">
-            <img src="../image/portfolio_png.png" alt="">
-          </div>
           <a href="../content/profile.html">
             <h3 class="text-repeat">
               <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
@@ -71,99 +66,101 @@
           </a>
         </div>
       </div>
-    </div>
-    <nav>
-      <div id="g-nav">
-        <div class="g-nav-box">
-          <div class="p-top">
-            <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+      <div class="p-top menu-trigger" id="menu07">
+        <img src="../image/portfolio_png.png" alt="">
+      </div>
+      <nav>
+        <div id="g-nav">
+          <div class="g-nav-box">
+            <div class="p-top">
+              <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+            </div>
+            <ul class="g-nav-main">
+              <li>
+                <a href="../index_2.html">
+                  <h1>Top</h1>
+                </a>
+              </li>
+              <li>
+                <h1>Profile</h1>
+              </li>
+              <li class="contents-click">
+                <h1>Contents</h1>
+                <div class="g-nav-contents-box none">
+                  <ul class="g-nav-contents">
+                    <li>
+                      <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="tennnoharuka.html">天のはるか</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                    </li>
+                    <li>
+                      <h2><a href="JOYL.html">JOYL</a></h2>
+                    </li>
+                  </ul>
+                </div>
+
+              </li>
+            </ul>
           </div>
-          <ul class="g-nav-main">
-            <li>
-              <a href="../index.html">
-                <h1>Top</h1>
-              </a>
-            </li>
-            <li>
-              <h1>Profile</h1>
-            </li>
-            <li class="contents-click">
-              <h1>Contents</h1>
-              <div class="g-nav-contents-box none">
-                <ul class="g-nav-contents">
-                  <li>
-                    <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="tennnoharuka.html">天のはるか</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
-                  </li>
-                  <li>
-                    <h2><a href="JOYL.html">JOYL</a></h2>
-                  </li>
-                </ul>
-              </div>
+        </div>
+      </nav>
+    </header>
 
-            </li>
-          </ul>
+    <div class="content-width">
+      <div class="ct-title">
+        <h1 class="fukushima">どのしまにする？</h1>
+      </div>
+      <div class="sec-top">
+        <div class="top-img left-width">
+          <img src="../image/Fukushima/fukushima_icon.jpg" alt="">
+        </div>
+        <div class="top-exp right-width">
+          <div class="exp-box">
+            <h3>Project</h3>
+            <h6>
+              福島県の観光PR。B1ポスターとB3ワイド中吊り広告を作成。<br>東京都に住む人に向けて、福島県にJRを利用して行きたくなる、魅力をアピールすることを目的とする。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Target</h3>
+            <h6>東京都に住む、日常でJRを利用する20代〜50代男女。<br>福島県にあまり訪れたことがない人や、福島県の観光地についての知識が少ないため、旅行のハードルが高いと感じている人。</h6>
+          </div>
+          <div class="exp-box">
+            <h3>Concept</h3>
+            <h3>どのしまにする？</h3>
+            <h6>
+              福島県は日本で3番目に面積が広い。それぞれの行きたい場所や所有時間に応じて、JRを利用して満喫できるちょうどいいルートを提案してくれるサイトへ繋げるためのポスター。<br>福島県旅行の満足度を上げ、また満喫できると確信できることで、旅行者数の底上げと福島県全体の認知拡大・再訪を狙う。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Font</h3>
+            <h6>日本語<span class="yu-gothic">游ゴシック</span>・<span class="tsukushi">筑紫B丸ゴシック</span></h6>
+          </div>
+          <div class="exp-box">
+            <h3>Item / Time required</h3>
+            <ul class="item-list">
+              <li>
+                <h6><a href="#area-1">Poster B1</a>・<a href="#area-2">B3 wide</a> / 7h</h6>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <div class="content-width">
-    <div class="ct-title">
-      <h1 class="fukushima">どのしまにする？</h1>
-    </div>
-    <div class="sec-top">
-      <div class="top-img left-width">
-        <img src="../image/Fukushima/fukushima_icon.jpg" alt="">
-      </div>
-      <div class="top-exp right-width">
-        <div class="exp-box">
-          <h3>Project</h3>
-          <h6>
-            福島県の観光PR。B1ポスターとB3ワイド中吊り広告を作成。<br>東京都に住む人に向けて、福島県にJRを利用して行きたくなる、魅力をアピールすることを目的とする。
-          </h6>
-        </div>
-        <div class="exp-box">
-          <h3>Target</h3>
-          <h6>東京都に住む、日常でJRを利用する20代〜50代男女。<br>福島県にあまり訪れたことがない人や、福島県の観光地についての知識が少ないため、旅行のハードルが高いと感じている人。</h6>
-        </div>
-        <div class="exp-box">
-          <h3>Concept</h3>
-          <h3>どのしまにする？</h3>
-          <h6>
-            福島県は日本で3番目に面積が広い。それぞれの行きたい場所や所有時間に応じて、JRを利用して満喫できるちょうどいいルートを提案してくれるサイトへ繋げるためのポスター。<br>福島県旅行の満足度を上げ、また満喫できると確信できることで、旅行者数の底上げと福島県全体の認知拡大・再訪を狙う。
-          </h6>
-        </div>
-        <div class="exp-box">
-          <h3>Font</h3>
-          <h6>日本語<span class="yu-gothic">游ゴシック</span>・<span class="tsukushi">筑紫B丸ゴシック</span></h6>
-        </div>
-        <div class="exp-box">
-          <h3>Item / Time required</h3>
-          <ul class="item-list">
-            <li>
-              <h6><a href="#area-1">Poster B1</a>・<a href="#area-2">B3 wide</a> / 7h</h6>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="sec-1 top-mg" id="area-1">
-      <div class="left-width">
-        <h1>Poster</h1>
-        <h3>B1 W728*H1030</h3>
-        <!-- <ul class="p-goto-nav__lists">
+      <div class="sec-1 top-mg" id="area-1">
+        <div class="left-width">
+          <h1>Poster</h1>
+          <h3>B1 W728*H1030</h3>
+          <!-- <ul class="p-goto-nav__lists">
           <div class="copy-box">
             <h3>Lead copy</h3>
             <h3 class="lead-copy">ふくのしま。福島。
@@ -176,38 +173,38 @@
             </h6>
           </div>
         </ul> -->
-      </div>
-      <div class="right-width">
-        <div class="img-position">
-          <img src="../image/Fukushima/fukushima_A1.jpg" alt="" class="fukushima-img">
         </div>
-        
-      </div>
-    </div>
-    <img src="../image/Fukushima/Free Three Subway Station Poster Mockup.jpg" alt="" class="fukushima-img-mock">
+        <div class="right-width">
+          <div class="img-position">
+            <img src="../image/Fukushima/fukushima_A1.jpg" alt="" class="fukushima-img">
+          </div>
 
-    <div class="top-mg fk-copy">
-      <div class="right-width">
-        <div class="copy-box">
-          <h3>Lead copy</h3>
-          <h3 class="lead-copy">ふくのしま。福島。
-          </h3>
-        </div>
-        <div class="copy-box">
-          <h3>Body copy</h3>
-          <h6>
-            福島って広いから。<br>気になる1つの”しま”を選んだら、あなたにぴったりの満喫をJR東日本が提案します。
-          </h6>
         </div>
       </div>
-    </div>
+      <img src="../image/Fukushima/Free Three Subway Station Poster Mockup.jpg" alt="" class="fukushima-img-mock">
+
+      <div class="top-mg fk-copy">
+        <div class="right-width">
+          <div class="copy-box">
+            <h3>Lead copy</h3>
+            <h3 class="lead-copy">ふくのしま。福島。
+            </h3>
+          </div>
+          <div class="copy-box">
+            <h3>Body copy</h3>
+            <h6>
+              福島って広いから。<br>気になる1つの”しま”を選んだら、あなたにぴったりの満喫をJR東日本が提案します。
+            </h6>
+          </div>
+        </div>
+      </div>
 
 
-    <div class="sec-2 top-mg fk-copy" id="area-2">
-      <div class="left-width">
-        <h1>Poster</h1>
-        <h3>B3 wide W1030*H364</h3>
-        <!-- <ul class="p-goto-nav__lists">
+      <div class="sec-2 top-mg fk-copy" id="area-2">
+        <div class="left-width">
+          <h1>Poster</h1>
+          <h3>B3 wide W1030*H364</h3>
+          <!-- <ul class="p-goto-nav__lists">
           <li class="p-goto-nav__list js-navList">
             <p>B3 wide Poster</p>
           </li>
@@ -215,9 +212,9 @@
             <p>MockUp</p>
           </li>
         </ul> -->
-      </div>
-      
-      <!-- <div class="right-width">
+        </div>
+
+        <!-- <div class="right-width">
         <div class="slider">
           <ul class="slider js-slickGoTo">
             <li class="slider-item slider-item53">
@@ -235,6 +232,8 @@
           <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
         </a></p>
     </footer>
+
+  </div>
 
 
   </div>
